# virtual-surv-IT

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README-old.md  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  pyproject.toml  readme2.md  requirements-dev.txt  requirements-review.txt  team-update-2026-06-30.txt
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
config/: feed-schema-example.yaml  masking-schema.yaml  regulatory-register.yaml
docs/: DEFINITION-OF-DONE.md  OVERVIEW.md  WAYS-OF-WORKING.md  agent-design.md  claude-code-setup-review.md  code-review-method.md  coding-standards.md  eval-baseline-2026-07-06.md  evidence-base.md  executive-brief-draft.html  glossary.md  house-rules.md  prepare-data-design.md  prepare-data-roadmap.md  research-virtual-team.md  scope-and-stack.md  team-operating-guide.md  team-pipeline-review.md
evals/: README.md
hooks/: hooks.json
rules/: __init__.py  spoofing.py
scripts/: __init__.py  calibrate_spoofing.py  check-review-tools.sh  check_artifacts.py  check_citations.py  convert_file.py  dashboard.py  dod_stop_gate.py  eval_score.py  gen_synthetic.py  ingest.py  install-git-hooks.sh  render_findings.py  render_html.py  synthesise.py  validate_findings.py  validate_manifest.py  validate_masking.py
tests/: test_check_artifacts.py  test_check_citations.py  test_convert_file.py  test_dashboard.py  test_docs_consistency.py  test_dod_stop_gate.py  test_eval_cases.py  test_eval_score.py  test_findings.py  test_guard_consent.py  test_guard_fixes.py  (+8 more)
(+266 files in other folders)
